--- a/Front-end/StudentList.html
+++ b/Front-end/StudentList.html
@@ -30,17 +30,17 @@
 		</div>
 		<br/>
 		<!--List for displaying all students in the database that have book data-->
-		<div ng-app="studentApp" ng-controller = "studentCtrl">
+		<div ng-app="gideonApp" ng-controller = "studentCtrl">
 			<h1>List of Students</h1>
 			<!--Filter text blocks-->
 			<div class = "columnContainer" id = "filterContainer">
 				<div class = "twoColumn">
 					<p id = "filterText">Filter by Name: </p>
-					<input id = "textFilter" name = "textFilter" type = "text" ng-model="clientFilter">
+					<input black id = "textFilter" name = "textFilter" type = "text" ng-model="clientFilter">
 				</div>
 				<div class = "twoColumn">
 					<p id = "filterText">Filter by Email: </p>
-					<input id = "textFilter" name = "textFilter" type = "text" ng-model="emailFilter">
+					<input black id = "textFilter" name = "textFilter" type = "text" ng-model="emailFilter">
 				</div>
 			</div>
 
